[gd_scene load_steps=12 format=3 uid="uid://4i6i04xnehmx"]

[ext_resource type="Theme" uid="uid://d24xi7m4k637h" path="res://assets/theme/default_theme.tres" id="1_advbf"]
[ext_resource type="Script" path="res://global/tools/item_editor.gd" id="2_wcjh1"]
[ext_resource type="FontFile" uid="uid://3laylbry7cvb" path="res://assets/theme/Fonts/Inter-VariableFont_slnt,wght.ttf" id="3_chx0s"]
[ext_resource type="Texture2D" uid="uid://bmq4jv8cyfh3x" path="res://assets/sprites/Item__44.png" id="12_wn7g1"]
[ext_resource type="Texture2D" uid="uid://x3h13mjklmbs" path="res://assets/sprites/Item__57.png" id="13_cadsc"]
[ext_resource type="Texture2D" uid="uid://b07nawi7ehdbe" path="res://assets/sprites/Item__62.png" id="14_hpoop"]
[ext_resource type="Texture2D" uid="uid://dqe6hxh214ij5" path="res://assets/sprites/Item__48.png" id="15_y3hku"]
[ext_resource type="Texture2D" uid="uid://5oerlj3xal2m" path="res://assets/sprites/Item__01.png" id="16_43ae3"]
[ext_resource type="Texture2D" uid="uid://bqnfy508la6uw" path="res://assets/sprites/Item__25.png" id="17_avm0c"]
[ext_resource type="Texture2D" uid="uid://dwjsh247otcxp" path="res://assets/sprites/Item__32.png" id="18_fba57"]
[ext_resource type="Texture2D" uid="uid://cxrtcfihc2fh4" path="res://assets/sprites/Item__36.png" id="19_o74b7"]

[node name="ItemEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_advbf")
script = ExtResource("2_wcjh1")

[node name="GridContainer5" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="GridContainer5"]
layout_mode = 2
text = "Data Path"

[node name="DataPath" type="LineEdit" parent="GridContainer5"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
text = "item_database_test.json"
expand_to_text_length = true

[node name="SelectDataButton" type="Button" parent="GridContainer5"]
layout_mode = 2
text = "Select Data"

[node name="DataFile" type="FileDialog" parent="GridContainer5"]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://resources/data/"

[node name="HSeparator6" type="HSeparator" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="ItemNameLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Item Name"

[node name="ItemName" type="LineEdit" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Sword of Anger"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Cosmetics" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Cosmetics"]
layout_mode = 2
text = "Cosmetics"

[node name="FileDialog" type="FileDialog" parent="Cosmetics"]
unique_name_in_owner = true
title = "Open File(s)"
ok_button_text = "Open"
file_mode = 1
root_subfolder = "res://resources/sprites/gear/"

[node name="CosmeticsList" type="ItemList" parent="Cosmetics"]
unique_name_in_owner = true
layout_mode = 2
auto_height = true

[node name="GridContainer" type="GridContainer" parent="Cosmetics"]
layout_mode = 2
columns = 2

[node name="SelectCosmetics" type="Button" parent="Cosmetics/GridContainer"]
layout_mode = 2
text = "Select Cosmetics"

[node name="ClearCosmetics" type="Button" parent="Cosmetics/GridContainer"]
layout_mode = 2
text = "Clear"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PossibleStatsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Possible Stats
"

[node name="WeightLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stat Weight"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="StatsContainer"]
layout_mode = 2
columns = 3

[node name="StatsDropdown" type="OptionButton" parent="StatsContainer/StatsGrid"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_advbf")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_chx0s")
expand_icon = true

[node name="WeightSlider" type="HSlider" parent="StatsContainer/StatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true

[node name="WeightLabel" type="Label" parent="StatsContainer/StatsGrid"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="AddStats" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "Add Stats"

[node name="RemoveStats" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "Remove Stats"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TextureFile" type="FileDialog" parent="VBoxContainer"]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://resources/sprites/gear/"

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.101961)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("12_wn7g1")

[node name="GridContainer4" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="AddTexture" type="Button" parent="VBoxContainer/GridContainer4"]
layout_mode = 2
text = "Add Texture"

[node name="ClearTexture" type="Button" parent="VBoxContainer/GridContainer4"]
layout_mode = 2
text = "Clear Texture"

[node name="HSeparator5" type="HSeparator" parent="."]
layout_mode = 2

[node name="GridContainer4" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer4"]
layout_mode = 2
text = "Select Type"

[node name="ItemType" type="OptionButton" parent="GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 8
popup/item_0/text = "HEAD"
popup/item_0/icon = ExtResource("12_wn7g1")
popup/item_0/id = 0
popup/item_1/text = "CHEST"
popup/item_1/icon = ExtResource("13_cadsc")
popup/item_1/id = 1
popup/item_2/text = "HANDS"
popup/item_2/icon = ExtResource("14_hpoop")
popup/item_2/id = 2
popup/item_3/text = "FEET"
popup/item_3/icon = ExtResource("15_y3hku")
popup/item_3/id = 3
popup/item_4/text = "WEAPON"
popup/item_4/icon = ExtResource("16_43ae3")
popup/item_4/id = 4
popup/item_5/text = "SHIELD"
popup/item_5/icon = ExtResource("17_avm0c")
popup/item_5/id = 5
popup/item_6/text = "ACCESSORY"
popup/item_6/icon = ExtResource("18_fba57")
popup/item_6/id = 6
popup/item_7/text = "MAIN"
popup/item_7/icon = ExtResource("19_o74b7")
popup/item_7/id = 7

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="GridContainer3" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="SaveButton" type="Button" parent="GridContainer3"]
layout_mode = 2
text = "Save"

[node name="ClearAllButton" type="Button" parent="GridContainer3"]
layout_mode = 2
text = "Reset"

[connection signal="button_up" from="GridContainer5/SelectDataButton" to="." method="_on_select_data_button_button_up"]
[connection signal="file_selected" from="GridContainer5/DataFile" to="." method="_on_data_file_file_selected"]
[connection signal="files_selected" from="Cosmetics/FileDialog" to="." method="_on_file_dialog_files_selected"]
[connection signal="button_up" from="Cosmetics/GridContainer/SelectCosmetics" to="." method="_on_select_cosmetics_button_up"]
[connection signal="button_up" from="Cosmetics/GridContainer/ClearCosmetics" to="." method="_on_clear_cosmetics_button_up"]
[connection signal="focus_entered" from="StatsContainer/StatsGrid/StatsDropdown" to="." method="_on_stats_dropdown_focus_entered"]
[connection signal="value_changed" from="StatsContainer/StatsGrid/WeightSlider" to="." method="_on_weight_slider_value_changed"]
[connection signal="button_up" from="GridContainer2/AddStats" to="." method="_on_add_stats_button_up"]
[connection signal="button_up" from="GridContainer2/RemoveStats" to="." method="_on_remove_stats_button_up"]
[connection signal="file_selected" from="VBoxContainer/TextureFile" to="." method="_on_texture_file_file_selected"]
[connection signal="button_up" from="VBoxContainer/GridContainer4/AddTexture" to="." method="_on_add_texture_button_up"]
[connection signal="button_up" from="VBoxContainer/GridContainer4/ClearTexture" to="." method="_on_clear_texture_button_up"]
[connection signal="pressed" from="GridContainer3/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="button_up" from="GridContainer3/ClearAllButton" to="." method="_on_clear_all_button_button_up"]
